--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,10 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "platform": {
+          "php": "7.4.2"
+        }
     },
     "extra": {
         "drupal-scaffold": {
