Revert "Install console and examples module"
This reverts commit dff5a9ddabe682377a7c418438ea03838ef228ee.

--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,6 @@
         "drupal/core-recommended": "^9",
         "drupal/core-vendor-hardening": "^9",
         "drupal/ctools": "^3.4",
-        "drupal/examples": "^3.0",
         "drupal/pathauto": "^1.8",
         "drupal/vani": "^1.2",
         "drush/drush": "^10.3"
@@ -35,7 +34,10 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "platform": {
+          "php": "7.4.2"
+        }
     },
     "extra": {
         "drupal-scaffold": {
