--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,37 @@
         {
             "type": "composer",
             "url": "https://packages.drupal.org/8"
-        }
+        },
+        {
+          "type": "package",
+          "package": {
+              "name": "d3/d3",
+              "version": "v3.5.17",
+              "type": "drupal-library",
+              "source": {
+                  "url": "https://github.com/d3/d3.git",
+                  "type": "git",
+                  "reference": "tags/v3.5.17"
+              }
+          }
+      },
+      {
+          "type": "package",
+          "package": {
+              "name": "highlightjs/highlightjs",
+              "version": "9.7.0",
+              "type": "drupal-library",
+              "source": {
+                  "url": "https://github.com/highlightjs/highlight.js.git",
+                  "type": "git",
+                  "reference": "tags/9.7.0"
+              }
+          }
+      }
     ],
     "require": {
         "composer/installers": "^1.9",
+        "d3/d3": "^3.5",
         "drupal/admin_toolbar": "^2.3",
         "drupal/coder": "^8.3",
         "drupal/console": "~1.0",
@@ -28,7 +55,8 @@
         "drupal/examples": "^3.0",
         "drupal/pathauto": "^1.8",
         "drupal/vani": "^1.2",
-        "drush/drush": "^10.3"
+        "drush/drush": "^10.3",
+        "highlightjs/highlightjs": "^9.7"
     },
     "conflict": {
         "drupal/drupal": "*"
